[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/menu_item.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/m3x6.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu/pause_menu.gd" type="Script" id=3]
[ext_resource path="res://menu/help_menu.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
extra_spacing_top = -3
font_data = ExtResource( 2 )

[node name="pause_menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel_container" type="PanelContainer" parent="control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -47.0
margin_right = 56.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box_container" type="VBoxContainer" parent="control/panel_container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 105.0
margin_bottom = 87.0

[node name="continue_container" type="HBoxContainer" parent="control/panel_container/v_box_container"]
margin_left = 28.0
margin_right = 70.0
margin_bottom = 10.0
size_flags_horizontal = 4

[node name="menu_item" parent="control/panel_container/v_box_container/continue_container" instance=ExtResource( 1 )]
margin_top = 1.0
margin_bottom = 9.0
focus_neighbour_left = NodePath("../../quit_to_windows/menu_item")
focus_neighbour_top = NodePath("../../quit_to_windows/menu_item")
focus_neighbour_right = NodePath("../../restart_room_container/menu_item")
focus_neighbour_bottom = NodePath("../../restart_room_container/menu_item")
focus_next = NodePath("../../restart_room_container/menu_item")
focus_previous = NodePath("../../quit_to_windows/menu_item")
size_flags_horizontal = 4
size_flags_vertical = 4
initial_focus = true

[node name="continue_label" type="Label" parent="control/panel_container/v_box_container/continue_container"]
margin_left = 12.0
margin_right = 42.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Continue"

[node name="restart_room_container" type="HBoxContainer" parent="control/panel_container/v_box_container"]
margin_left = 17.0
margin_top = 14.0
margin_right = 80.0
margin_bottom = 24.0
size_flags_horizontal = 4

[node name="menu_item" parent="control/panel_container/v_box_container/restart_room_container" instance=ExtResource( 1 )]
margin_top = 1.0
margin_bottom = 9.0
focus_neighbour_left = NodePath("../../continue_container/menu_item")
focus_neighbour_top = NodePath("../../continue_container/menu_item")
focus_neighbour_right = NodePath("../../restart_level_container/menu_item")
focus_neighbour_bottom = NodePath("../../restart_level_container/menu_item")
focus_next = NodePath("../../restart_level_container/menu_item")
focus_previous = NodePath("../../continue_container/menu_item")
size_flags_horizontal = 4
size_flags_vertical = 4
menu_option = "restart_room"

[node name="restart_room_label2" type="Label" parent="control/panel_container/v_box_container/restart_room_container"]
margin_left = 12.0
margin_right = 63.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Restart Room"

[node name="restart_level_container" type="HBoxContainer" parent="control/panel_container/v_box_container"]
margin_left = 17.0
margin_top = 28.0
margin_right = 81.0
margin_bottom = 38.0
size_flags_horizontal = 4

[node name="menu_item" parent="control/panel_container/v_box_container/restart_level_container" instance=ExtResource( 1 )]
margin_top = 1.0
margin_bottom = 9.0
focus_neighbour_left = NodePath("../../restart_room_container/menu_item")
focus_neighbour_top = NodePath("../../restart_room_container/menu_item")
focus_neighbour_right = NodePath("../../control_help_container/menu_item")
focus_neighbour_bottom = NodePath("../../control_help_container/menu_item")
focus_next = NodePath("../../control_help_container/menu_item")
focus_previous = NodePath("../../restart_room_container/menu_item")
size_flags_horizontal = 4
size_flags_vertical = 4
menu_option = "restart_level"

[node name="restart_level_label" type="Label" parent="control/panel_container/v_box_container/restart_level_container"]
margin_left = 12.0
margin_right = 64.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Restart Level"

[node name="control_help_container" type="HBoxContainer" parent="control/panel_container/v_box_container"]
margin_left = 17.0
margin_top = 42.0
margin_right = 80.0
margin_bottom = 52.0
size_flags_horizontal = 4

[node name="menu_item" parent="control/panel_container/v_box_container/control_help_container" instance=ExtResource( 1 )]
margin_top = 1.0
margin_bottom = 9.0
focus_neighbour_left = NodePath("../../restart_level_container/menu_item")
focus_neighbour_top = NodePath("../../restart_level_container/menu_item")
focus_neighbour_right = NodePath("../../exit_to_menu/menu_item")
focus_neighbour_bottom = NodePath("../../exit_to_menu/menu_item")
focus_next = NodePath("../../exit_to_menu/menu_item")
focus_previous = NodePath("../../restart_level_container/menu_item")
size_flags_horizontal = 4
size_flags_vertical = 4
menu_option = "controls"

[node name="control_help_label" type="Label" parent="control/panel_container/v_box_container/control_help_container"]
margin_left = 12.0
margin_right = 63.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Controls Help"

[node name="exit_to_menu" type="HBoxContainer" parent="control/panel_container/v_box_container"]
margin_left = 7.0
margin_top = 56.0
margin_right = 90.0
margin_bottom = 66.0
size_flags_horizontal = 4

[node name="menu_item" parent="control/panel_container/v_box_container/exit_to_menu" instance=ExtResource( 1 )]
margin_top = 1.0
margin_bottom = 9.0
focus_neighbour_left = NodePath("../../control_help_container/menu_item")
focus_neighbour_top = NodePath("../../control_help_container/menu_item")
focus_neighbour_right = NodePath("../../quit_to_windows/menu_item")
focus_neighbour_bottom = NodePath("../../quit_to_windows/menu_item")
focus_next = NodePath("../../quit_to_windows/menu_item")
focus_previous = NodePath("../../control_help_container/menu_item")
size_flags_horizontal = 4
size_flags_vertical = 4
menu_option = "to_main_menu"

[node name="exit_to_main_menu" type="Label" parent="control/panel_container/v_box_container/exit_to_menu"]
margin_left = 12.0
margin_right = 83.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Exit to Main Menu"

[node name="quit_to_windows" type="HBoxContainer" parent="control/panel_container/v_box_container"]
margin_left = 16.0
margin_top = 70.0
margin_right = 82.0
margin_bottom = 80.0
size_flags_horizontal = 4

[node name="menu_item" parent="control/panel_container/v_box_container/quit_to_windows" instance=ExtResource( 1 )]
margin_top = 1.0
margin_bottom = 9.0
focus_neighbour_left = NodePath("../../exit_to_menu/menu_item")
focus_neighbour_top = NodePath("../../exit_to_menu/menu_item")
focus_neighbour_right = NodePath("../../continue_container/menu_item")
focus_neighbour_bottom = NodePath("../../continue_container/menu_item")
focus_next = NodePath("../../continue_container/menu_item")
focus_previous = NodePath("../../exit_to_menu/menu_item")
size_flags_horizontal = 4
size_flags_vertical = 4
menu_option = "quit"

[node name="restart_level_label" type="Label" parent="control/panel_container/v_box_container/quit_to_windows"]
margin_left = 12.0
margin_right = 66.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Quit the Game"

[node name="help_menu" parent="." instance=ExtResource( 4 )]
layer = 2
[connection signal="focus_exited" from="control/panel_container/v_box_container/continue_container/menu_item" to="control/panel_container/v_box_container/continue_container/menu_item" method="_on_menu_item_focus_exited"]
[connection signal="focus_exited" from="control/panel_container/v_box_container/restart_room_container/menu_item" to="control/panel_container/v_box_container/restart_room_container/menu_item" method="_on_menu_item_focus_exited"]
[connection signal="focus_exited" from="control/panel_container/v_box_container/restart_level_container/menu_item" to="control/panel_container/v_box_container/restart_level_container/menu_item" method="_on_menu_item_focus_exited"]
[connection signal="focus_exited" from="control/panel_container/v_box_container/control_help_container/menu_item" to="control/panel_container/v_box_container/control_help_container/menu_item" method="_on_menu_item_focus_exited"]
[connection signal="focus_exited" from="control/panel_container/v_box_container/exit_to_menu/menu_item" to="control/panel_container/v_box_container/exit_to_menu/menu_item" method="_on_menu_item_focus_exited"]
[connection signal="focus_exited" from="control/panel_container/v_box_container/quit_to_windows/menu_item" to="control/panel_container/v_box_container/quit_to_windows/menu_item" method="_on_menu_item_focus_exited"]
